# kit-vcs

./: .gitignore  CMakeLists.txt  README.md  note.md  test_kit_vcs.sh
include/: cli.hpp  hash_object.hpp  kit_utils.hpp  kit_vcs.hpp  version.hpp
include/cli/: cli.hpp
include/commands/: branch.hpp  checkout.hpp  commit.hpp  diff.hpp  merge.hpp  reset.hpp  stash.hpp  status.hpp
include/utils/: common_includes.hpp  constants.hpp  error_handler.hpp  hash_object.hpp  kit_utils.hpp  logger.hpp  mock_kit_utils.hpp
src/: hash_object.cpp  main.cpp
tests/: test_commands.cpp  test_kit_vcs.cpp
